Fixx  flexslider image wrong width

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -74,7 +74,7 @@ body {
 
 #main {
   min-height: 60%;
-  /* margin-top: 3.2em; */
+  margin-top: 3.2em;
 }
 
 #content {
